resources/argocd/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: test-selfsigned
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/hostname: deployments.lwille.xyz
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        pathType: Prefix
        path: /
    host: deployments.lwille.xyz
  tls:
  - secretName: https-cert
    hosts:
    - deployments.lwille.xyz
